--- a/environment.yaml
+++ b/environment.yaml
@@ -18,12 +18,13 @@ dependencies:
   - brotli-bin=1.1.0
   - brotli-python=1.1.0
   - bzip2=1.0.8
-  - ca-certificates=2024.8.30
+  - ca-certificates=2025.1.31
   - cached-property=1.5.2
   - cached_property=1.5.2
-  - certifi=2024.8.30
+  - certifi=2025.1.31
   - cffi=1.17.1
   - charset-normalizer=3.4.0
+  - colorama=0.4.6
   - comm=0.2.2
   - contourpy=1.3.0
   - cpuonly=2.0
@@ -118,7 +119,7 @@ dependencies:
   - notebook-shim=0.2.4
   - numpy=1.26.4
   - openjpeg=2.5.2
-  - openssl=3.4.0
+  - openssl=3.4.1
   - overrides=7.7.0
   - packaging=24.2
   - pandas=2.2.2
@@ -184,6 +185,7 @@ dependencies:
   - torchaudio=2.5.1
   - torchvision=0.20.1
   - tornado=6.4.1
+  - tqdm=4.67.1
   - traitlets=5.14.3
   - types-python-dateutil=2.9.0.20241003
   - typing-extensions=4.12.2
