--- a/environment.yaml
+++ b/environment.yaml
@@ -32,7 +32,6 @@ dependencies:
   - cycler=0.12.1
   - debugpy=1.8.8
   - decorator=5.1.1
-  - deepxde=1.12.2
   - defusedxml=0.7.1
   - entrypoints=0.4
   - exceptiongroup=1.2.2
@@ -41,6 +40,7 @@ dependencies:
   - fonttools=4.55.0
   - fqdn=1.5.1
   - freetype=2.12.1
+  - fsspec=2025.3.2
   - giflib=5.2.2
   - gmp=6.3.0
   - gmpy2=2.1.5
@@ -51,11 +51,13 @@ dependencies:
   - httpx=0.27.2
   - hyperframe=6.0.1
   - idna=3.10
+  - ignite=0.5.2
   - importlib-metadata=8.5.0
   - importlib-resources=6.4.5
   - importlib_resources=6.4.5
   - ipykernel=6.29.5
   - ipython=8.18.1
+  - ipywidgets=8.1.5
   - isoduration=20.11.0
   - jedi=0.19.2
   - jinja2=3.1.4
@@ -74,10 +76,12 @@ dependencies:
   - jupyterlab=4.2.6
   - jupyterlab_pygments=0.3.0
   - jupyterlab_server=2.27.3
+  - jupyterlab_widgets=3.0.13
   - kiwisolver=1.4.7
   - krb5=1.21.3
   - lcms2=2.16
   - lerc=4.0.0
+  - libabseil=20250127.1
   - libblas=3.9.0
   - libbrotlicommon=1.1.0
   - libbrotlidec=1.1.0
@@ -93,14 +97,17 @@ dependencies:
   - liblapack=3.9.0
   - libopenblas=0.3.24
   - libpng=1.6.44
+  - libprotobuf=5.29.3
   - libsodium=1.0.20
   - libsqlite=3.47.0
   - libtiff=4.7.0
+  - libtorch=2.5.1
+  - libuv=1.50.0
   - libwebp=1.4.0
   - libwebp-base=1.4.0
   - libxcb=1.17.0
   - libzlib=1.3.1
-  - llvm-openmp=15.0.7
+  - llvm-openmp=20.1.1
   - markupsafe=3.0.2
   - matplotlib-base=3.9.2
   - matplotlib-inline=0.1.7
@@ -115,6 +122,7 @@ dependencies:
   - ncurses=6.5
   - nest-asyncio=1.6.0
   - networkx=3.2.1
+  - nomkl=1.0
   - notebook=7.2.2
   - notebook-shim=0.2.4
   - numpy=1.26.4
@@ -138,7 +146,8 @@ dependencies:
   - pthread-stubs=0.4
   - ptyprocess=0.7.0
   - pure_eval=0.2.3
-  - pyaml=24.9.0
+  - pybind11=2.13.6
+  - pybind11-global=2.13.6
   - pycparser=2.22
   - pygments=2.18.0
   - pyobjc-core=10.3.1
@@ -164,21 +173,21 @@ dependencies:
   - rfc3339-validator=0.1.4
   - rfc3986-validator=0.1.1
   - rpds-py=0.21.0
-  - scikit-learn=1.3.1
-  - scikit-optimize=0.10.2
+  - scikit-learn=1.6.1
   - scipy=1.13.1
   - seaborn=0.13.2
   - seaborn-base=0.13.2
   - send2trash=1.8.3
   - setuptools=75.5.0
   - six=1.16.0
+  - sleef=3.8
   - sniffio=1.3.1
   - soupsieve=2.5
   - stack_data=0.6.2
   - statsmodels=0.14.4
   - sympy=1.13.3
   - terminado=0.18.1
-  - threadpoolctl=3.5.0
+  - threadpoolctl=3.6.0
   - tinycss2=1.4.0
   - tk=8.6.13
   - tomli=2.1.0
@@ -200,6 +209,7 @@ dependencies:
   - webencodings=0.5.1
   - websocket-client=1.8.0
   - wheel=0.45.0
+  - widgetsnbextension=4.0.13
   - xorg-libxau=1.0.11
   - xorg-libxdmcp=1.1.5
   - xz=5.2.6
