--- a/.envrc
+++ b/.envrc
@@ -1,6 +1,6 @@
 # shellcheck shell=zsh
 
-CONDA_PATH="$HOME/.miniforge"
+CONDA_PATH="$HOME/.conda"
 
 __conda_setup="$("$CONDA_PATH/bin/conda" "shell.zsh" "hook" 2> /dev/null)"
 if [ $? -eq 0 ]; then
