--- a/environment.yaml
+++ b/environment.yaml
@@ -3,6 +3,7 @@ channels:
   - pytorch
   - conda-forge
 dependencies:
+  - absl-py=2.2.0
   - anyio=4.9.0
   - appnope=0.1.4
   - argon2-cffi=23.1.0
@@ -19,6 +20,7 @@ dependencies:
   - brotli-bin=1.1.0
   - brotli-python=1.1.0
   - bzip2=1.0.8
+  - c-ares=1.34.4
   - ca-certificates=2025.1.31
   - cached-property=1.5.2
   - cached_property=1.5.2
@@ -43,6 +45,7 @@ dependencies:
   - giflib=5.2.2
   - gmp=6.3.0
   - gmpy2=2.1.5
+  - grpcio=1.71.0
   - h11=0.14.0
   - h2=4.2.0
   - hpack=4.1.0
@@ -93,12 +96,14 @@ dependencies:
   - libffi=3.4.6
   - libgfortran=5.0.0
   - libgfortran5=14.2.0
+  - libgrpc=1.71.0
   - libjpeg-turbo=3.0.0
   - liblapack=3.9.0
   - liblzma=5.8.1
   - libopenblas=0.3.24
   - libpng=1.6.47
   - libprotobuf=5.29.3
+  - libre2-11=2024.07.02
   - libsodium=1.0.20
   - libsqlite=3.49.1
   - libtiff=4.7.0
@@ -111,6 +116,7 @@ dependencies:
   - lightning=2.5.1
   - lightning-utilities=0.14.3
   - llvm-openmp=20.1.2
+  - markdown=3.6
   - markupsafe=3.0.2
   - matplotlib=3.9.4
   - matplotlib-base=3.9.4
@@ -147,6 +153,7 @@ dependencies:
   - prometheus_client=0.21.1
   - prompt-toolkit=3.0.50
   - prompt_toolkit=3.0.50
+  - protobuf=5.29.3
   - psutil=7.0.0
   - pthread-stubs=0.4
   - ptyprocess=0.7.0
@@ -171,6 +178,7 @@ dependencies:
   - pyyaml=6.0.2
   - pyzmq=26.3.0
   - qhull=2020.2
+  - re2=2024.07.02
   - readline=8.2
   - referencing=0.36.2
   - requests=2.32.3
@@ -190,6 +198,8 @@ dependencies:
   - stack_data=0.6.3
   - statsmodels=0.14.4
   - sympy=1.13.3
+  - tensorboard=2.19.0
+  - tensorboard-data-server=0.7.0
   - terminado=0.18.1
   - threadpoolctl=3.6.0
   - tinycss2=1.4.0
@@ -213,6 +223,7 @@ dependencies:
   - webcolors=24.11.1
   - webencodings=0.5.1
   - websocket-client=1.8.0
+  - werkzeug=3.1.3
   - wheel=0.45.1
   - widgetsnbextension=4.0.13
   - xorg-libxau=1.0.12
