--- a/env.yaml
+++ b/env.yaml
@@ -21,10 +21,10 @@ dependencies:
   - brotli-python=1.1.0
   - bzip2=1.0.8
   - c-ares=1.34.4
-  - ca-certificates=2025.1.31
+  - ca-certificates=2025.4.26
   - cached-property=1.5.2
   - cached_property=1.5.2
-  - certifi=2025.1.31
+  - certifi=2025.4.26
   - cffi=1.17.1
   - charset-normalizer=3.4.1
   - colorama=0.4.6
@@ -137,7 +137,7 @@ dependencies:
   - notebook-shim=0.2.4
   - numpy=2.0.2
   - openjpeg=2.5.3
-  - openssl=3.4.1
+  - openssl=3.5.0
   - overrides=7.7.0
   - packaging=24.2
   - pandas=2.2.3
@@ -198,6 +198,7 @@ dependencies:
   - stack_data=0.6.3
   - statsmodels=0.14.4
   - sympy=1.13.3
+  - tabulate=0.9.0
   - tensorboard=2.19.0
   - tensorboard-data-server=0.7.0
   - terminado=0.18.1
