--- a/.envrc
+++ b/.envrc
@@ -1,18 +1,9 @@
-# shellcheck shell=zsh
+#!/bin/bash
 
-CONDA_PATH="$HOME/.conda"
+# Automatically sets up your devbox environment whenever you cd into this
+# directory via our direnv integration:
 
-__conda_setup="$("$CONDA_PATH/bin/conda" "shell.zsh" "hook" 2> /dev/null)"
-if [ $? -eq 0 ]; then
-    eval "$__conda_setup"
-else
-    if [ -f "$CONDA_PATH/etc/profile.d/conda.sh" ]; then
-        . "$CONDA_PATH/etc/profile.d/conda.sh"
-    else
-        export PATH="$CONDA_PATH/bin:$PATH"
-    fi
-fi
-unset __conda_setup
+eval "$(devbox generate direnv --print-envrc)"
 
-conda activate pinn
-
+# check out https://www.jetify.com/docs/devbox/ide_configuration/direnv/
+# for more details
